BASE-1 - fix wind direction alignment; minor translation fixes

--- a/src/main.css
+++ b/src/main.css
@@ -14,6 +14,10 @@ body {
     text-align: center;
 }
 
+body .pi {
+    font-size: 1em;
+}
+
 body .p-selectbutton .p-button.p-highlight {
     background-color: red;
 }
